[package]
name = "gpjc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
actix-rt = "1.1.0"
actix-cors = "0.5"
actix-web = "3"
actix-multipart = "0.3"
sanitize-filename = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.7.1"
futures = "0.3"
mime = "0.3"

r2d2 = "0.8"
r2d2_sqlite = "0.22"
rusqlite = "0.29"